<resources>
    <string name="app_name">XpayBack</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="whatsapp">Allow to send updates on whatsapp</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="verify_mobile_number">Verify mobile number</string>
    <string name="enter_the_6_digit_otp_sent_to_your_mobile_number">Enter the 6-digit OTP sent to your mobile number</string>
    <string name="continu">Continue</string>
    <string name="resend">Resend</string>
    <string name="one_last_step">One last step</string>
    <string name="to_add_for">to add for</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="have_a_referral_code">Have a Referral Code?</string>
    <string name="enter_referral">Enter referral code if any</string>
    <string name="your_information_is_safe_and_secure">Your information is safe and secure</string>
    <string name="get_ready_to_earn_guaranteed_cashback">Get ready to Earn Guaranteed Cashback</string>
    <string name="start_with_the_following_permission">Start with the following permission</string>
    <string name="notifications">Notifications</string>
    <string name="note_contact">We require this permission to assess your risk profile and determine
your eligibility. Our app collects and monitors your contacts informa
-tion which includes name, phone number, account type, favourites,
and other optional data like relationship</string>
    <string name="note_notification">We require this permission to promptly remind you for repayments of your bills, transaction confirmations, UP collect requests, and exciting offers only on the App</string>
    <string name="contact">Contacts</string>
    <string name="note_contacts">We require this permission to assess your risk profile and determine your eligibility. Our app collects and monitors your contacts informa -tion which includes name, phone number, account type, favourites, and other optional data like relationship</string>
    <string name="allow_permissions">Allow Permissions</string>
    <string name="profile_setup_success">Profile setup successful.\n You have earned</string>
    <string name="_500_gyft_tokens">500 GYFT Tokens</string>
    <string name="gyft_tokens_are_earned_by_shopping_with_xpayback">GYFT Tokens are earned by shopping with XPayBack.</string>
    <string name="ok_got_it">OK Got It</string>
    <string name="find_your_friends">Find your friends</string>
    <string name="we_ll_show_you_s_already_here_and_notify_you_n_when_your_friends_join">We’ll show you’s already here and notify you\n when your friends join</string>
    <string name="search_usinklg_my_contacts">Search using my contacts</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="you_will_earn">You will earn</string>
    <string name="_200_gyft_tokens">200 GYFT Tokens</string>
    <string name="home">Home</string>
    <string name="stores">Stores</string>
    <string name="purchases">Purchases</string>
    <string name="watchlist">Watchlist</string>
    <string name="search_for_products_or_stores">Search for Products or Stores</string>
    <string name="as_per_a_valid_govt_id_like_a_pan_card">As per a valid Govt. ID like a PAN card</string>
    <string name="sssss">sssss</string>
    <string name="earn_the_xpayback_way">Earn the XPayback Way</string>
    <string name="get_rewarded_for_spending_at_your_favourite_spots_when_you_pay_with_the_app">Get rewarded for spending at your \n favourite spots when you pay with the app</string>
    <string name="next">Next</string>
    <string name="shop_the_payback_way">Shop the Payback Way</string>
    <string name="earn_cashback_at_your_favourite_n_restaurants_supermarkets_and_n_pharmacies">Earn cashback at your favourite restaurants supermarkets and pharmacies</string>
    <string name="total_earned">Total Earned</string>
    <string name="gyft">$ GYFT</string>
    <string name="reward_s_waiting">Rewards</string>
    <string name="scan_pay"><![CDATA[Scan & Pay]]></string>
    <string name="pay_at_store">Pay at Store</string>
    <string name="_0">0</string>
    <string name="_327">327</string>
    <string name="_00">.00</string>
    <string name="xpay_wallet"> XPay \nWallet</string>
    <string name="gyft_wallet"> GYFT \n Wallet</string>
    <string name="prepaid_card">Prepaid \n Card</string>
    <string name="refer_earn"><![CDATA[Refer & \n Earn]]></string>
    <string name="scanning_something">Scanning Something…</string>
    <string name="dining">Dining</string>
    <string name="automobiles">Automobiles</string>
    <string name="dinning">Dinning</string>
    <string name="fashion">Fashion</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="entertainment">Entertainment</string>
    <string name="appliances">Appliances</string>
    <string name="groceries">Groceries</string>
    <string name="more">More</string>
    <string name="in_store_categories">In-Store Categories</string>
    <string name="sponsored_links">Sponsored LInks</string>
    <string name="zomato">Zomato</string>
    <string name="shopsy">Shopsy</string>
    <string name="jupiter">Jupiter</string>
    <string name="van">Van Heusen</string>
    <string name="myntra">Myntra</string>
    <string name="flipkart">Flipkart</string>
    <string name="swiggy">Swiggy</string>
    <string name="brand_vouchers">Brand Vouchers</string>
    <string name="recharge_bill_pay"><![CDATA[Recharge & Bill Pay]]></string>
    <string name="mobile">Mobile Recharge</string>
    <string name="dth">DTH</string>
    <string name="electricity">Electricity</string>
    <string name="card">Credit Card Bill</string>
    <string name="rent">Rent Payment</string>
    <string name="loan">Loan Repayment</string>
    <string name="book">Book A Cylinder</string>
    <string name="see_all">See All</string>
    <string name="World_health">World Health Day</string>
    <string name="Nankhli">Nanhikali</string>
    <string name="donate_meals">Donate Meals</string>
    <string name="donate_your_cashback">Donate Your Cashback</string>
    <string name="please_enter_email">Please enter email address</string>
    <string name="email">Invalid email address, please re-check your email address</string>
    <string name="date_valid">Please enter valid birthdate</string>
    <string name="profile">Profile</string>
    <string name="gyft_tokens">GYFT Tokens</string>
    <string name="_200_tokens">200 Tokens</string>
    <string name="my_wallet">My wallet</string>
    <string name="payments">Payments</string>
    <string name="transation_history">Transation History</string>
    <string name="find_friends">Find friends</string>
    <string name="setting">Setting</string>
    <string name="help_center">Help Center</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="log_out">Log out</string>
    <string name="password_security"><![CDATA[Password & Security]]></string>
    <string name="share_now">Share Now</string>
    <string name="sandeep">Sandeep</string>
    <string name="_622_400_6210">622–400–6210</string>
    <string name="edit">Edit</string>
    <string name="scan_any_qr_code">Scan any qr code</string>
    <string name="move_the_camera_to_see_the_n_qr_code_and_confirm">Move the camera to see the \n QR code and confirm</string>
    <string name="qr_scan">QR Scan</string>
    <string name="enter_mobile_number_to_pay">Enter Mobile Number to Pay</string>
    <string name="my_code">My Code</string>
    <string name="kyc">KYC</string>
    <string name="title">Title</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="pan_number">PAN Number</string>
    <string name="complete_your_kyc_now">Complete your KYC now!</string>
    <string name="link_your_details_to_complete_your_rbi_mandated_kyc_for_n_xpayback_and_enjoy_uninterrupted_services">Link your details to complete your RBI mandated KYC for \n XpayBack, and enjoy uninterrupted services.</string>
    <string name="id_number">ID Number</string>
    <string name="choose_your_id_proof">Choose your ID proof</string>
    <string name="as_per_new_rbi_guidelines_kyc_is_now_mandatory_to_use_xpayback_by_proceeding_to_complete_the_kyc_process_using_any_of_the_options_below_you_agree_to_the_applicable_t_c"><![CDATA[As per new RBI guidelines, KYC is now mandatory to use XpayBack. By proceeding to complete the KYC process using any of the options below, you agree to the applicable T&C]]></string>
    <string name="aadhaar_card">Aadhaar Card</string>
    <string name="pan_card">PAN Card</string>
    <string name="passport">Passport</string>
    <string name="driving_license">Driving License</string>
    <string name="nrega_job_card">NREGA JOB CARD</string>
    <string name="voter_id">Voter ID</string>
    <string name="submit">submit</string>
    <string name="id_proof">ID PROOF</string>
    <string name="address_proof">ADDRESS PROOF</string>
    <string name="phone_number">Phone Number</string>
    <string name="d_o_b">D.O.B</string>
    <string name="male">Male</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="postal_code">Postal Code</string>
    <string name="verify">Verify</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="account_authentication_instructions">Account Authentication Instructions</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="select_the_type_of_identity_to_proceed_with_the_authentication">Select the type of identity to proceed with the authentication</string>
    <string name="take_a_photo_of_the_front_and_the_back_of_the_identity">Take a photo of the front and the back of the identity</string>
    <string name="note_for_passports_please_get_page_2_3_of_the_passport">*Note: for passports, please get page 2,3 of the passport</string>
    <string name="click_on_the_veryfi_button">Click on the Veryfi button</string>
    <string name="choose_your_identity_type">Choose your identity type</string>
    <string name="id_card_front">ID Card (Front)</string>
    <string name="id_card_back">ID CARD (Back)</string>
    <string name="you_need_to_verify_information_to_protect_your_account">You need to verify information to protect your account</string>
    <string name="id_proof_update_n_successfully">Id Proof Update \n Successfully</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="add_address">Add Address</string>
    <string name="saved_address">Saved Address</string>
    <string name="confirm_your_locality">Confirm Your Locality</string>
    <string name="locality">Locality</string>
    <string name="change">CHANGE</string>
    <string name="confirm">Confirm</string>
    <string name="you_can_use_the_address_across_all_xpayback_services">You can use the address across all XPayBack services</string>
    <string name="house_flat_number">House/flat Number</string>
    <string name="address">address</string>
    <string name="land_mark">Land Mark</string>
    <string name="saved_as">Saved As</string>
    <string name="others">Others</string>
    <string name="work">Work</string>
    <string name="_75_off">75% Off</string>
    <string name="earn_upto">Earn Upto</string>
    <string name="cashback">CashBack</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="_5_5">5/5</string>
    <string name="lorem_ipsum_dolor_amet">Lorem Ipsum dolor \n amet</string>
    <string name="_2500">$2500</string>
    <string name="_1582">$1582</string>
</resources>