<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.location.LocationEditFragment">

    <ImageView
        android:id="@+id/btnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:src="@drawable/ic_arrowleft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="28dp"
        android:text="@string/add_address"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnback" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="4dp"
        android:text="@string/you_can_use_the_address_across_all_xpayback_services"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/locality"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />


    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit_style"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35">

        <EditText
            android:id="@+id/local_address"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@null"
            android:textSize="12sp"
            android:paddingStart="8dp"
            android:paddingEnd="5dp"
            android:textStyle="bold"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/change"
            android:layout_width="51dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/change"
            android:textColor="@color/darkorange"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry,SmallSp" />
    </LinearLayout>

    <EditText
        android:id="@+id/flat_no"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit_style"
        android:hint="@string/house_flat_number"
        android:paddingStart="8dp"
        android:textSize="12sp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout17"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/address2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit_style"
        android:hint="@string/address"
        android:paddingStart="8dp"
        android:textSize="12sp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flat_no"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/landmark"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/edit_style"
        android:hint="@string/land_mark"
        android:inputType="text"
        android:paddingStart="8dp"
        android:textSize="12sp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address2"
        tools:ignore="LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/saved_as"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/landmark"
        app:layout_constraintTop_toBottomOf="@+id/landmark" />

    <LinearLayout
        android:id="@+id/linearLayout18"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36">

        <TextView
            android:id="@+id/home"
            android:layout_width="72dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="14dp"
            android:layout_weight="1"
            android:background="@drawable/edit_style"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="12dp"
            android:text="@string/home"
            android:textSize="10sp"
            app:drawableStartCompat="@drawable/ic_home_small"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/work"
            android:layout_width="72dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="14dp"
            android:layout_weight="1"
            android:background="@drawable/edit_style"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="12dp"
            android:text="@string/work"
            android:textSize="10sp"
            app:drawableStartCompat="@drawable/ic_work"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/others"
            android:layout_width="72dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="14dp"
            android:layout_weight="1"
            android:background="@drawable/edit_style"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="12dp"
            android:text="@string/others"
            android:textSize="10sp"
            app:drawableStartCompat="@drawable/pin"
            tools:ignore="RtlSymmetry,SmallSp" />
    </LinearLayout>


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/btn_style"
        android:text="@string/submit"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/landmark"
        app:layout_constraintStart_toStartOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout18"
        tools:ignore="SmallSp" />
</androidx.constraintlayout.widget.ConstraintLayout>