<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="241dp"
    android:layout_marginStart="1dp">

    <ImageView
        android:id="@+id/dashMainRecyCardImgId"
        android:layout_width="117dp"
        android:layout_height="128dp"
        android:scaleType="fitXY"
        android:src="@drawable/trending_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:layout_width="48dp"
        android:layout_height="31dp"
        android:background="@drawable/offer_layer_backgroun_trending"
        android:orientation="vertical"
        android:paddingStart="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/darkorange"
            android:text="@string/earn_upto"
            android:textColor="@color/white"
            android:textSize="6sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.561"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/offerPercentageFragDashCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/darkorange"
            android:text="@string/_75_off"
            android:textColor="@color/white"
            android:textSize="8sp"
            android:textStyle="bold"
            tools:ignore="SmallSp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/darkorange"
            android:text="@string/cashback"
            android:textColor="@color/white"
            android:textSize="5sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <TextView
        android:id="@+id/modelNameTrendingDashMainRecyCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashMainRecyCardImgId" />

    <ImageView
        android:id="@+id/starDashCardRecyID"
        android:layout_width="9dp"
        android:layout_height="9dp"
        android:layout_marginStart="3dp"
        android:scaleType="fitXY"
        android:src="@drawable/star_icon"
        app:layout_constraintBottom_toBottomOf="@+id/ratingTextId"
        app:layout_constraintLeft_toRightOf="@id/modelNameTrendingDashMainRecyCard"
        app:layout_constraintTop_toTopOf="@+id/ratingTextId" />

    <TextView
        android:id="@+id/ratingTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/darker_grotesque_semibold"
        android:text="@string/_5_5"
        android:textColor="@color/darkorange"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/modelNameTrendingDashMainRecyCard"

        app:layout_constraintLeft_toRightOf="@id/starDashCardRecyID"
        app:layout_constraintTop_toTopOf="@+id/modelNameTrendingDashMainRecyCard" />

    <TextView
        android:id="@+id/descriptionDashCardRecy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/lorem_ipsum_dolor_amet"
        android:textSize="8dp"
        app:layout_constraintEnd_toEndOf="@+id/modelNameTrendingDashMainRecyCard"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="@+id/modelNameTrendingDashMainRecyCard"
        app:layout_constraintTop_toBottomOf="@id/modelNameTrendingDashMainRecyCard" />

    <TextView
        android:id="@+id/oldPricedashMainRecyCardID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/strike_line_style"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/_2500"
        android:textColor="#A6A6A6"
        android:textSize="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionDashCardRecy" />

    <TextView
        android:id="@+id/currentPriceCardDashBoardhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/_1582"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/oldPricedashMainRecyCardID"
        app:layout_constraintStart_toEndOf="@id/oldPricedashMainRecyCardID"
        app:layout_constraintTop_toTopOf="@+id/oldPricedashMainRecyCardID" />

    <ImageView
        android:id="@+id/purchaseCompanyIconCard"
        android:layout_width="33dp"
        android:layout_height="13dp"
        android:layout_marginStart="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/amazonsmall"
        app:layout_constraintBottom_toBottomOf="@+id/currentPriceCardDashBoardhome"
        app:layout_constraintStart_toEndOf="@+id/currentPriceCardDashBoardhome"
        app:layout_constraintTop_toTopOf="@+id/currentPriceCardDashBoardhome" />

    <ImageView
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:src="@drawable/trend_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/purchaseCompanyIconCard" />


</androidx.constraintlayout.widget.ConstraintLayout>